--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
 	"repositories":[
 		{
 			"type": "composer",
-			"url": "http://wpackagist.org/"
+			"url": "https://wpackagist.org/"
 		}
 	],
 	"require": {
 		"php": ">=5.2.4",
 		"xrstf/composer-php52": "1.*",
-		"wpackagist-plugin/formidable": "2.0.21",
-		"wp-pay/core": "^1.3.4"
+		"wpackagist-plugin/formidable": "2.0.24",
+		"wp-pay/core": "^1.3.5"
 	},
 	"require-dev": {
 		"phpmd/phpmd": "^2.2.3",
