--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
 		"source": "https://github.com/wp-pay-extensions/formidable-forms"
 	},
 	"autoload": {
-		"classmap": ["src/"]
+		"psr-4": {
+			"Pronamic\\WordPress\\Pay\\Extensions\\FormidableForms\\": "src/"
+		}
 	},
 	"repositories":[
 		{
