--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^3.3.0",
     "grunt-phpcs": "^0.4.0",
     "grunt-phplint": "0.1.0",
     "grunt-phpmd": "^0.1.1",
     "grunt-phpunit": "^0.3.6",
     "grunt-postcss": "^0.9.0",
+    "grunt-sass-lint": "^0.2.4",
     "load-grunt-tasks": "^3.5.2"
   }
 }
