--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   },
   "homepage": "http://www.wp-pay.org/extensions/formidable-forms/",
   "devDependencies": {
-    "autoprefixer": "^8.5.0",
-    "grunt": "~1.0.2",
+    "autoprefixer": "^8.6.5",
+    "grunt": "^1.0.3",
     "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-uglify": "^3.4.0",
     "grunt-phpcs": "^0.4.0",
     "grunt-phplint": "0.1.0",
     "grunt-phpmd": "^0.1.1",
