--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "http://www.wp-pay.org/extensions/formidable-forms/",
   "devDependencies": {
+    "@wordpress/env": "^5.2.0",
     "autoprefixer": "^10.2.1",
     "grunt": "^1.3.0",
     "grunt-contrib-compass": "^1.1.1",
@@ -46,5 +47,9 @@
     "grunt-postcss": "^0.9.0",
     "grunt-sass-lint": "^0.2.4",
     "load-grunt-tasks": "^5.1.0"
+  },
+  "scripts": {
+    "start": "wp-env start",
+    "login": "wp-env run cli wp user one-time-login admin"
   }
 }
