Fix PHPStan config ("Path wp-content/formidable does not exist").

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -6,6 +6,6 @@ parameters:
 	bootstrapFiles:
 		- tests/phpstan/bootstrap.php
 	scanDirectories:
-		- wp-content/formidable
+		- wp-content/plugins/formidable
 	paths:
 		- src/
