--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /bin               export-ignore
+/scss              export-ignore
 /tests             export-ignore
 /.gitattributes    export-ignore
 /.github           export-ignore
@@ -8,7 +9,6 @@
 /.travis.yml       export-ignore
 /.wp-env.json      export-ignore
 /Gruntfile.js      export-ignore
-/package.json      export-ignore
 /phpcs.xml.dist    export-ignore
 /phpmd.ruleset.xml export-ignore
 /phpstan.neon.dist export-ignore
